Update GarbageCollection.md